[gd_scene load_steps=40 format=2]

[ext_resource path="res://Scenes/Minigame1/PuzzleController/PuzzleController.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Minigame1/InstrumetPart/IntrumentPart.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Arts/Instruments/Violino/2- Alma 1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Arts/Instruments/Violino/1 - Tampo Inferior 1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Arts/Instruments/Violino/Case do Violino.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Minigame1/InstrumetPart/StaticPart.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Arts/Instruments/Violino/4 - Braço 1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Arts/Instruments/Violino/3 - Costela e Tampo superior.png" type="Texture" id=8]
[ext_resource path="res://Assets/Arts/Instruments/Violino/5 - Botão + Estandarte + Cabalete + Pestana 1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Arts/Instruments/Violino/6 - Aberturas em S stroke 2pt 1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Arts/Instruments/Violino/8 - Voluta (1).png" type="Texture" id=11]
[ext_resource path="res://Assets/Arts/Instruments/Violino/9 - Cravelha.png" type="Texture" id=12]
[ext_resource path="res://Assets/Arts/Instruments/Violino/7 - Queixeira 1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Arts/Instruments/Violino/11 - Cordas enroladas 1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Arts/Instruments/Violino/10 - Espelho 1.png" type="Texture" id=15]
[ext_resource path="res://Assets/Arts/Instruments/Violino/11.1 - Cordas stroke esticada.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 119, 69 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 55, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 119, 68 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 109, 14 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 162, 32 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 38, 50 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 29, 35 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 40, 30 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 90, 15 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 30, 37 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 119, 69 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 34, 42 )

[sub_resource type="StreamTexture" id=13]
flags = 4
load_path = "res://.import/4 - Braço 1.png-8ca2a1d5685d4fa6738d86f3b93e327d.stex"

[sub_resource type="GDScript" id=14]
script/source = "extends Sprite

export var area_collision : Shape2D
#export var move_part : bool = true
export var part_name : String = \"Text\"

var selected : bool = false

signal move_piece( area )

func _ready() -> void:
	$Area/Collision.shape = area_collision
#	if move_part:
#		$\".\".add_to_group(\"movel_part\")
#	else:
#		$Area.connect(\"area_entered\", self, \"on_area_entered\")
#		$\".\".modulate = Color(1,0,0,1)
#		$\".\".add_to_group(\"static_part\")

func _process(delta: float) -> void:
	if selected:
		global_position = lerp(global_position, get_global_mouse_position(), 25*delta)

func _on_mouse_entered() -> void:
	emit_signal(\"move_piece\", self)

func _on_mouse_exited() -> void:
	emit_signal(\"move_piece\", null)
	selected = false

func get_part_name() -> String:
	return part_name

"

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 65, 15 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 119, 69 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 160, 16 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 38, 50 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 29, 35 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 40, 30 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 40, 37 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 108, 15 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 78, 95 )

[node name="PuzzleController" type="Node2D"]
script = ExtResource( 1 )

[node name="NullObj" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 1228, 670 )

[node name="ViolinCase" type="Sprite" parent="."]
position = Vector2( 636, 352 )
texture = ExtResource( 5 )

[node name="StaticPieces" type="Node2D" parent="."]

[node name="StaticPart" parent="StaticPieces" instance=ExtResource( 6 )]
position = Vector2( 520, 438 )
texture = ExtResource( 4 )
area_collision = SubResource( 1 )
part_name = "tampa"

[node name="StaticPart2" parent="StaticPieces" instance=ExtResource( 6 )]
position = Vector2( 520, 438 )
texture = ExtResource( 3 )
area_collision = SubResource( 1 )
part_name = "alma"

[node name="StaticPart3" parent="StaticPieces" instance=ExtResource( 6 )]
position = Vector2( 702, 438 )
texture = ExtResource( 7 )
area_collision = SubResource( 2 )
part_name = "braço"

[node name="StaticPart4" parent="StaticPieces" instance=ExtResource( 6 )]
position = Vector2( 520, 438 )
texture = ExtResource( 8 )
area_collision = SubResource( 3 )
part_name = "tampoSup"

[node name="StaticPart6" parent="StaticPieces" instance=ExtResource( 6 )]
position = Vector2( 664, 440 )
texture = ExtResource( 15 )
area_collision = SubResource( 4 )
part_name = "espelho"

[node name="StaticPart5" parent="StaticPieces" instance=ExtResource( 6 )]
position = Vector2( 562, 439 )
texture = ExtResource( 9 )
area_collision = SubResource( 5 )
part_name = "conjunto"

[node name="StaticPart7" parent="StaticPieces" instance=ExtResource( 6 )]
position = Vector2( 498, 437.5 )
texture = ExtResource( 10 )
area_collision = SubResource( 6 )
part_name = "aberturaS"

[node name="StaticPart8" parent="StaticPieces" instance=ExtResource( 6 )]
visible = false
texture = ExtResource( 13 )
area_collision = SubResource( 7 )
part_name = "queixeira"

[node name="StaticPart9" parent="StaticPieces" instance=ExtResource( 6 )]
position = Vector2( 763.044, 439.393 )
texture = ExtResource( 11 )
area_collision = SubResource( 8 )
part_name = "voluta"

[node name="StaticPart10" parent="StaticPieces" instance=ExtResource( 6 )]
position = Vector2( 613.009, 439.293 )
scale = Vector2( 0.8, 1 )
texture = ExtResource( 16 )
area_collision = SubResource( 9 )
part_name = "cordas"

[node name="StaticPart11" parent="StaticPieces" instance=ExtResource( 6 )]
position = Vector2( 752, 440 )
texture = ExtResource( 12 )
area_collision = SubResource( 10 )
part_name = "cravelha"

[node name="MovePieces" type="Node2D" parent="."]
position = Vector2( 0, 10 )

[node name="IntrumentPart2" parent="MovePieces" instance=ExtResource( 2 )]
position = Vector2( 174, 260 )
texture = ExtResource( 4 )
area_collision = SubResource( 11 )
part_name = "tampa"

[node name="IntrumentPart" parent="MovePieces" instance=ExtResource( 2 )]
position = Vector2( 202, 106 )
texture = ExtResource( 3 )
area_collision = SubResource( 12 )
part_name = "alma"

[node name="IntrumentPart3" parent="MovePieces" instance=ExtResource( 2 )]
position = Vector2( 616, 160 )
texture = SubResource( 13 )
script = SubResource( 14 )
area_collision = SubResource( 15 )
part_name = "braço"

[node name="IntrumentPart4" parent="MovePieces" instance=ExtResource( 2 )]
position = Vector2( 1094, 386 )
texture = ExtResource( 8 )
area_collision = SubResource( 16 )
part_name = "tampoSup"

[node name="IntrumentPart5" parent="MovePieces" instance=ExtResource( 2 )]
position = Vector2( 516, 80 )
texture = ExtResource( 9 )
area_collision = SubResource( 17 )
part_name = "conjunto"

[node name="IntrumentPart6" parent="MovePieces" instance=ExtResource( 2 )]
position = Vector2( 820, 78 )
texture = ExtResource( 10 )
area_collision = SubResource( 18 )
part_name = "aberturaS"

[node name="IntrumentPart7" parent="MovePieces" instance=ExtResource( 2 )]
visible = false
position = Vector2( 82, 414 )
texture = ExtResource( 13 )
area_collision = SubResource( 19 )
part_name = "queixeira"

[node name="IntrumentPart8" parent="MovePieces" instance=ExtResource( 2 )]
position = Vector2( 936, 144 )
texture = ExtResource( 11 )
area_collision = SubResource( 20 )
part_name = "voluta"

[node name="IntrumentPart9" parent="MovePieces" instance=ExtResource( 2 )]
position = Vector2( 212, 410 )
texture = ExtResource( 12 )
area_collision = SubResource( 21 )
part_name = "cravelha"

[node name="IntrumentPart10" parent="MovePieces" instance=ExtResource( 2 )]
position = Vector2( 1086, 524 )
texture = ExtResource( 15 )
area_collision = SubResource( 22 )
part_name = "espelho"

[node name="IntrumentPart11" parent="MovePieces" instance=ExtResource( 2 )]
position = Vector2( 1114, 142 )
texture = ExtResource( 14 )
area_collision = SubResource( 23 )
part_name = "cordas"
